--- a/client/src/css/generators/_flexbox.scss
+++ b/client/src/css/generators/_flexbox.scss
@@ -113,7 +113,7 @@
 
     & > div {
       position:relative;
-      z-index: 200;
+      z-index: 10;
     }
   }
 }
